--- a/app/public/young.html
+++ b/app/public/young.html
@@ -107,6 +107,11 @@
                     </div>
                 </div>
         </div>
+        <footer class="chikkiFooter">
+                <p id="copyRight">© 2018 Chikki Bar &trade;</p> 
+                <a href="" target="_blank" class="fa fa-facebook"></a> |
+                <a href=""  target="_blank" class="fa fa-linkedin"></a>
+        </footer>
         <script>
             function openSlideMenu() {
                 document.getElementById('side-menu').style.width = '250px';
