adds new logo and jumbotron as well as fixes the email php

--- a/app/public/young.html
+++ b/app/public/young.html
@@ -20,9 +20,9 @@
             <span class="open-slide">
                 <a href="#" onclick="openSlideMenu()">
                     <svg width="30" height="30">
-                        <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
-                            <path d="M0,14 30,14" stroke="#fff" stroke-width="5" />
-                            <path d="M0,23 30,23" stroke="#fff" stroke-width="5" />
+                        <path d="M0,5 30,5" stroke="#b97d43" stroke-width="5" />
+                            <path d="M0,14 30,14" stroke="#b97d43" stroke-width="5" />
+                            <path d="M0,23 30,23" stroke="#b97d43" stroke-width="5" />
                         <p id="menu">MENU</p>
                     </svg>
                 </a>
@@ -49,10 +49,10 @@
                     <div class="col-xs-12 col-md-6 col-md-offset-3 young">
                         <h2>About </h2>
                         <hr>
-                        <img src="images/mohnishsoni.jpg" class="img-responsive" alt="Thats Me" width=200 height=auto>
+                        <img src="images/mohnishsoni.png" class="img-responsive" alt="Thats Me" width=200 height=auto>
                         <span>Mohnish Soni is a 8th grade student at Iroquois Community School located in Des Plaines, Illinois. He is an energized entrepreneur
                             who wants to make snack time healthier which is why he decided to launch Chikki Bar as a sole-proprietorship business
-                            with the help of Young Entrepreneurs Academy.</span>
+                            with the help of Young Entrepreneurs Academy, which he was enrolled in since the age of 12. </span>
                     </div>
                 </div>
             </div>
