--- a/app/public/index.html
+++ b/app/public/index.html
@@ -21,9 +21,9 @@
             <span class="open-slide">
                 <a href="#" onclick="openSlideMenu()">
                     <svg width="30" height="30">
-                        <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
-                            <path d="M0,14 30,14" stroke="#fff" stroke-width="5" />
-                            <path d="M0,23 30,23" stroke="#fff" stroke-width="5" />
+                        <path d="M0,5 30,5" stroke="#b97d43" stroke-width="5" />
+                            <path d="M0,14 30,14" stroke="#b97d43" stroke-width="5" />
+                            <path d="M0,23 30,23" stroke="#b97d43" stroke-width="5" />
                         <p id="menu">MENU</p>
                     </svg>
                 </a>
